# aerial

./: .gitignore  .gitmodules  CMakeLists.txt  profiler.bat  profiler.sh
Aerial/: CMakeLists.txt
Aerial/src/: Aerial.h
Aerial/src/Aerial/: Aerial.h
Aerial/src/Aerial/Core/: Application.cpp  Application.h  BumpAlloc.h  Core.h  EntryPoint.h  Events.h  FrameDelta.h  LinkedList.h  Logger.h  Memory.h  Profiler.h  Timer.h  UUID.h  logger.h  timer.h  uuid.h
Aerial/src/Aerial/ECS/: Context.cpp  Context.h  Entity.cpp  Entity.h  System.h  ecs_system.h
Aerial/src/Aerial/Systems/: AssetSystem.cpp  AssetSystem.h  AudioSystem.cpp  AudioSystem.h  EventSystem.cpp  EventSystem.h  InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
